[package]
name = "webo"
version = "0.0.1"
edition = "2021"

[dependencies]
iced = "0.13.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20.0"
tokio = { version = "1.41.0", features = ["full"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
